--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -14,40 +14,40 @@
     <!-- 表單內容 -->
     <div class="my-16 overflow-y-auto">
       <%= simple_form_for @podcast, url: podcasts_path do |f| %>
-      <section class="w-full py-2 flex">
-        <div class="w-56 h-80 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
-          <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
-          <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
-            <abbr title="required">*</abbr>上傳封面圖片
-            <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
-          </label>
-        </div>
-        <div class="w-full text-sm pr-4">
-          <%= f.input :name, input_html:{class: "edit-form" }, label: "Podcast 節目名稱"%>
-          <%= f.input :artist, input_html:{class: "edit-form" }, label: "創作者名稱" %>
-          <%= f.input :email, input_html:{class: "edit-form" }, label: "Email" %>
-          <%= f.input :language, collection: ["繁體中文", "简体中文", "粵語", "English", "日本語", "한국어"], input_html:{class: "edit-form" }, label: "語言" %>
-        </div>
-      </section>
-      <section class="w-full px-6 text-sm">
-        <%= f.input :slug, input_html:{class: "edit-form" }, label: "好記短網址", hint: "必須為英文與數字，請勿使用特殊符號。" %>
-        <%= f.input :genres, collection: Podcast.genres.keys, input_html:{class: "edit-form" }, label: "類別" %>
-        <%= f.input :description, input_html:{class: "edit-form" }, label: "描述", placeholder: "描述這個 Podcast 所包含的內容。" %>
-        <%= f.input :subtitle, input_html:{class: "edit-form" }, label: "Subtitle" %>
-        <%= f.input :weblink, input_html:{class: "edit-form" }, label: "網站連結" %>
-        <%= f.input :copyright, input_html:{class: "edit-form" }, label: "版權宣告Copyright" %>
-        <%= f.input :explicit, input_html:{class: "m-2 p-2" }, label: "兒童不宜" %>
-      </section>
+        <section class="w-full py-2 flex">
+          <div class="w-56 h-80 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
+            <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
+            <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+              <abbr title="required">*</abbr>上傳封面圖片
+              <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
+            </label>
+          </div>
+          <div class="w-full text-sm pr-4">
+            <%= f.input :name, input_html:{class: "edit-form" }, label: "Podcast 節目名稱"%>
+            <%= f.input :artist, input_html:{class: "edit-form" }, label: "創作者名稱" %>
+            <%= f.input :email, input_html:{class: "edit-form" }, label: "Email" %>
+            <%= f.input :language, collection: ["繁體中文", "简体中文", "粵語", "English", "日本語", "한국어"], input_html:{class: "edit-form" }, label: "語言" %>
+          </div>
+        </section>
+        <section class="w-full px-6 text-sm">
+          <%= f.input :slug, input_html:{class: "edit-form" }, label: "好記短網址", hint: "必須為英文與數字，請勿使用特殊符號。" %>
+          <%= f.input :genres, collection: Podcast.genres.keys, input_html:{class: "edit-form" }, label: "類別" %>
+          <%= f.input :description, input_html:{class: "edit-form" }, label: "描述", placeholder: "描述這個 Podcast 所包含的內容。" %>
+          <%= f.input :subtitle, input_html:{class: "edit-form" }, label: "Subtitle" %>
+          <%= f.input :weblink, input_html:{class: "edit-form" }, label: "網站連結" %>
+          <%= f.input :copyright, input_html:{class: "edit-form" }, label: "版權宣告Copyright" %>
+          <%= f.input :explicit, input_html:{class: "m-2 p-2" }, label: "兒童不宜" %>
+        </section>
+        <nav class="fixed bottom-0 right-0 border-t border-gray-200 create-podcast-content">
+          <div class="flex w-full justify-end p-3">
+            <span id="close-create-podcast" class="border border-gray-300 mx-2 py-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+              取消
+            </span>
+            <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded" %>
+          </div>
+        </nav>
+      <% end %>
     </div>
-    <nav class="fixed bottom-0 border-t border-gray-200">
-      <div class="flex w-full justify-end p-3">
-        <span id="close-create-podcast" class="border border-gray-300 mx-2 py-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
-          取消
-        </span>
-        <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded" %>
-      </div>
-    </nav>
-    <% end %>
   </div>
 </div>
 
@@ -67,67 +67,67 @@
     <!-- 表單內容 -->
     <div class="my-16 overflow-y-auto">
       <%= simple_form_for @episode, url: podcast_episodes_path("0") do |f| %>
-      <div class="nav-tabs h-20 flex items-end border-b border-gray-100">
-        <ul class="inline-flex ml-4" id="createEpisodeFrom">
-          <li class="cursor-pointer hover:text-blue-400 font-medium mx-1 pt-3 pb-5 px-2 transition duration-200 text-blue-500 border-b-2 border-blue-400" id="mainEpisode">主要</li>
-          <li class="cursor-pointer hover:text-blue-400 font-medium mx-1 pt-3 pb-5 px-2 transition duration-200" id="moreEpisode">更多</li>
-        </ul>
-      </div>
-      <!-- 主要 -->
-      <section class="mainEpisode_content">
-        <section class="w-full p-2 pr-5 flex flex-col text-sm">
-          <label class="w-full border border-dashed rounded-md mx-2 my-3 py-4 px-6 focus:outline-none focus:border-blue-400 focus:ring focus:ring-blue-100 transition duration-300 cursor-pointer">
-            <abbr title="required">*</abbr>
-            選擇要上傳的 mp3 音檔
-            <span class="mx-2 text-white pt-1 pb-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded">
-              瀏覽
-            </span>
-            <%= f.input :recording, as: :file, input_html:{class: "hidden" }, label: false %>
-          </label>
-          <%= f.input :title, input_html:{class: "edit-form" }, label: "標題" %>
-          <%= f.input :description, input_html:{class: "edit-form" }, label: "描述" %>
-          <%= f.input :keyword, input_html:{class: "edit-form" }, label: "關鍵字" %>
-          <div class="flex">
-            <%= f.input :episode, input_html:{class: "flex-grow edit-form" }, label: "集" %>
-            <%= f.input :season, input_html:{class: "flex-grow edit-form" }, label: "季" %>
-          </div>
-          <%= f.input :explicit, input_html:{class: "" }, label: "兒童不宜" %>
-        </section>
-      </section>
-      <!-- 更多 -->
-      <section class="moreEpisode_content hidden">
-        <section class="w-full py-2 flex">
-          <div class="w-full text-sm pr-5">
-            <%= f.input :keyword, input_html:{class: "edit-form" }, label: "Subtitle"%>
-            <%= f.input :artist, input_html:{class: "edit-form" }, label: "作者名稱" %>
-          </div>
-          <div class="w-56 h-64 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
-            <div class="w-48 h-48 rounded-lg bg-gray-300"></div>
-            <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
-              上傳封面圖片
-              <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
+        <div class="nav-tabs h-20 flex items-end border-b border-gray-100">
+          <ul class="inline-flex ml-4" id="createEpisodeFrom">
+            <li class="cursor-pointer hover:text-blue-400 font-medium mx-1 pt-3 pb-5 px-2 transition duration-200 text-blue-500 border-b-2 border-blue-400" id="mainEpisode">主要</li>
+            <li class="cursor-pointer hover:text-blue-400 font-medium mx-1 pt-3 pb-5 px-2 transition duration-200" id="moreEpisode">更多</li>
+          </ul>
+        </div>
+        <!-- 主要 -->
+        <section class="mainEpisode_content">
+          <section class="w-full p-2 pr-5 flex flex-col text-sm">
+            <label class="w-full border border-dashed rounded-md mx-2 my-3 py-4 px-6 focus:outline-none focus:border-blue-400 focus:ring focus:ring-blue-100 transition duration-300 cursor-pointer">
+              <abbr title="required">*</abbr>
+              選擇要上傳的 mp3 音檔
+              <span class="mx-2 text-white pt-1 pb-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded">
+                瀏覽
+              </span>
+              <%= f.input :recording, as: :file, input_html:{class: "hidden" }, label: false %>
             </label>
+            <%= f.input :title, input_html:{class: "edit-form" }, label: "標題" %>
+            <%= f.input :description, input_html:{class: "edit-form" }, label: "描述" %>
+            <%= f.input :keyword, input_html:{class: "edit-form" }, label: "關鍵字" %>
+            <div class="flex">
+              <%= f.input :episode, input_html:{class: "flex-grow edit-form" }, label: "集" %>
+              <%= f.input :season, input_html:{class: "flex-grow edit-form" }, label: "季" %>
+            </div>
+            <%= f.input :explicit, input_html:{class: "" }, label: "兒童不宜" %>
+          </section>
+        </section>
+        <!-- 更多 -->
+        <section class="moreEpisode_content hidden">
+          <section class="w-full py-2 flex">
+            <div class="w-full text-sm pr-5">
+              <%= f.input :keyword, input_html:{class: "edit-form" }, label: "Subtitle"%>
+              <%= f.input :artist, input_html:{class: "edit-form" }, label: "作者名稱" %>
+            </div>
+            <div class="w-56 h-64 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
+              <div class="w-48 h-48 rounded-lg bg-gray-300"></div>
+              <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+                上傳封面圖片
+                <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
+              </label>
+            </div>
+          </section>
+          <div class="p-2 pr-6">
+            <%= f.input :keyword, as: :text, input_html:{class: "edit-form" }, label: "Summary"%>
           </div>
         </section>
-        <div class="p-2 pr-6">
-          <%= f.input :keyword, as: :text, input_html:{class: "edit-form" }, label: "Summary"%>
-        </div>
-      </section>
+        <nav class="fixed bottom-0 border-t border-gray-200 create-episode-content">
+          <div class="flex w-full justify-between p-3">
+            <span id="close-create-episode" class="border border-gray-300 mx-2 py-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+              取消
+            </span>
+            <div class="flex">
+              <span class="cursor-pointer border border-blue-500 text-blue-500 mx-2 py-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+                暫存草稿
+              </span>
+              <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded" %>
+            </div>
+          </div>
+        </nav>
+      <% end %>
     </div>
-    <nav class="fixed bottom-0 border-t border-gray-200">
-      <div class="flex w-full justify-between p-3">
-        <span id="close-create-episode" class="border border-gray-300 mx-2 py-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
-          取消
-        </span>
-        <div class="flex">
-          <span class="cursor-pointer border border-blue-500 text-blue-500 mx-2 py-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
-            暫存草稿
-          </span>
-          <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded" %>
-        </div>
-      </div>
-    </nav>
-    <% end %>
   </div>
 </div>
 
