--- a/app/javascript/styles/button.scss
+++ b/app/javascript/styles/button.scss
@@ -1,3 +1,7 @@
+button {
+  @apply focus:outline-none;
+}
+
 .btn {
   @apply rounded font-medium px-4 py-2 shadow-xl hover:shadow-inner focus:outline-none transition duration-500 ease-in-out transform hover:-translate-x-0 hover:scale-105;
 }
