前台header加上會員登入及註冊按鈕

--- a/app/views/player/podcasts/browse.html.erb
+++ b/app/views/player/podcasts/browse.html.erb
@@ -6,7 +6,7 @@
       <h1 class="text-4xl text-titleblue">隨時隨地, 找到頻率最對的聲音</h1>
       <div class="text-white mt-3">
         <p>經典並非老派</p>
-        <p>SoundOn 以音頻為基礎, 結合創新科技應用</p>
+        <p>SoundBar 以音頻為基礎, 結合創新科技應用</p>
         <p>收藏你所愛, 毋須擔心過時的問題</p>
         <p>人性化的設計讓您隨時擁有溫度的聲音</p>
       </div>
