--- a/app/javascript/styles/player.scss
+++ b/app/javascript/styles/player.scss
@@ -23,11 +23,11 @@
 }
 
 .fb_icon {
-  @apply border-2 border-gray-500 rounded-full m-2 px-3 py-1 h-auto w-auto text-2xl hover:border-white hover:text-white duration-300;
+  @apply border-2 border-gray-500 rounded-full m-2 px-3 py-1 h-auto w-auto text-xl hover:border-white hover:text-white duration-300;
 }
 
 .share_icon {
-  @apply border-2 border-gray-500 rounded-full m-2 px-2 py-1 h-auto w-auto text-2xl hover:border-white hover:text-white duration-300;
+  @apply border-2 border-gray-500 rounded-full m-2 px-2 py-1 h-auto w-auto text-xl hover:border-white hover:text-white duration-300;
 }
 
 .plbutton {
