--- a/app/views/frontend/_header.html.erb
+++ b/app/views/frontend/_header.html.erb
@@ -2,10 +2,10 @@
   <div class="flex m-6 justify-center md:justify-start">
     <%= link_to image_tag("logo_trans", size: "220x220"), "/#" %>
   </div>
-  <form class="search-form justify-center hover:border-blue-600 rounded-full flex my-auto mr-5">
+  <form class="justify-center hover:border-blue-600 rounded-full flex my-auto mr-5">
     <div class="flex r-0 m-2 p-2">
       <div class="p-2"><%= link_to "登入", new_user_session_url(subdomain: "host"), class: "btn btn-primary" %></div>
-      <div class="p-2"><%= link_to "馬上註冊", new_user_registration_url(subdomain: "host") , class: "btn btn-primary" %></div>
+      <div class="p-2"><%= link_to "註冊", new_user_registration_url(subdomain: "host") , class: "btn btn-primary" %></div>
     </div>
     <button class="search-btn focus:outline-none w-10 bg-white rounded-l-full text-gray-500 border-none p-2 h-10 my-auto"><i class="fas fa-search"></i></button><input type="text" class="search-input focus:outline-none h-10 w-12 sm:w-40 md:w-44 bg-white rounded-r-full p-2 my-auto" placeholder="搜尋 Podcast">
   </form>
