--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -16,19 +16,41 @@
       <%= simple_form_for @podcast, url: podcasts_path do |f| %>
       <section class="w-full py-2 flex">
         <div class="w-56 h-80 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
-          <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
-          <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
-          上傳封面圖片
-          <div>
-            <img src="" id="image">
-          </div>
-          <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
-          <%= f.hidden_field :x, id:"dataX"%>
-          <%= f.hidden_field :y, id:"dataY"%>
-          <%= f.hidden_field :width, id:"dataWidth"%>
-          <%= f.hidden_field :height, id:"dataHeight"%>
-          </label>
-        </div>
+        <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
+        <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+          <abbr title="required">*</abbr>上傳封面圖片
+          <%= f.input :cover, as: :file, input_html:{class: "hidden", id:"podcast_cover"}, label: false %>
+          <%= f.hidden_field :x %>
+          <%= f.hidden_field :y %>
+          <%= f.hidden_field :width %>
+          <%= f.hidden_field :height %>
+          <%= f.submit "button", id:"btnUpload", class: 'hidden'%>
+        </label>
+      </div>
+<!-- start -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <div class="preview" style='overflow:hidden'>
+              <img src="" id="croppedImage" style="display: none;" />
+            </div>
+
+
+          <dialog id="dialog">
+            <canvas id="canvas">
+              <img src="" id="imageModal" alt="picture" style="display: none;"/>
+            </canvas>
+            <div class="modal-footer">
+              <button type="button" class=" btn btn-primary" id="btn-save" data-dismiss="modal">Save</button>
+            </div>
+          </dialog>
+              </div>
+
+
+    </div>
+  </div>
+<!-- end -->
+
         <div class="w-full text-sm pr-4">
           <%= f.input :name, input_html:{class: "edit-form" }, label: "Podcast 節目名稱"%>
           <%= f.input :artist, input_html:{class: "edit-form" }, label: "創作者名稱" %>
