--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -112,7 +112,7 @@
               <i class="fas fa-search"></i>
             </span>
           </form>
-          <div class="create-episode-btn border border-gray-300 py-1 px-4 text-sm bg-white hover:text-blue-500 hover:border-blue-500 cursor-pointer transition duration-300 rounded">
+          <div class="episode-create-episode-btn border border-gray-300 py-1 px-4 text-sm bg-white hover:text-blue-500 hover:border-blue-500 cursor-pointer transition duration-300 rounded">
             ＋ 新增單集
           </div>
         </div>
