--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -171,7 +171,7 @@
               </div>
             </div>
             <div class="flex justify-between">
-              <span class="create-episode-btn py-3 px-5 text-gray-400 hover:text-blue-400" data-random-url="<%= podcast.random_url %>"> ＋ 新增單集</span>
+              <span class="podcast-create-episode-btn py-3 px-5 text-gray-400 hover:text-blue-400" data-random-url="<%= podcast.random_url %>"> ＋ 新增單集</span>
               <%= link_to '<i class="far fa-caret-square-right"></i>'.html_safe, player_podcast_url(podcast.random_url, subdomain: "player"), class: "py-3 px-5 text-gray-400 hover:text-blue-400", target: "_blank" %>
             </div>
           </div>
