remove jquery and bootstrap and croppimg image completed

--- a/app/javascript/styles/cropper.scss
+++ b/app/javascript/styles/cropper.scss
@@ -1,5 +1,13 @@
-img {
+#canvas {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.cropper-container{
+  max-height: 500px;
+}
+#btn-save{
+  margin-top: 1em;
+  margin-left: 80%;
 }
