--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -15,8 +15,11 @@
     <div class="my-16 overflow-y-auto">
       <%= simple_form_for @podcast, url: podcasts_path do |f| %>
       <section class="w-full py-2 flex">
-        <div class="w-56 h-80 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
-        <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
+        <div class="w-56 h-80 pr-2 pt-2 ml-2 rounded flex flex-col flex-shrink-0 items-center">
+        <div class="preview" style='overflow:hidden'>
+              <img src="" id="croppedImage" style="display: none;"/>
+              <div class="w-48 h-48 rounded-lg bg-gray-300" id="beforeUpload"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
+        </div>
         <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
           <abbr title="required">*</abbr>上傳封面圖片
           <%= f.input :cover, as: :file, input_html:{class: "hidden", id:"podcast_cover"}, label: false %>
@@ -27,30 +30,14 @@
           <%= f.submit "button", id:"btnUpload", class: 'hidden'%>
         </label>
       </div>
-<!-- start -->
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <div class="preview" style='overflow:hidden'>
-              <img src="" id="croppedImage" style="display: none;" />
-            </div>
-
-
-          <dialog id="dialog">
-            <canvas id="canvas">
-              <img src="" id="imageModal" alt="picture" style="display: none;"/>
-            </canvas>
-            <div class="modal-footer">
-              <button type="button" class=" btn btn-primary" id="btn-save" data-dismiss="modal">Save</button>
-            </div>
-          </dialog>
-              </div>
-
-
-    </div>
-  </div>
-<!-- end -->
-
+      <dialog id="dialog">
+        <canvas id="canvas">
+          <img src="" id="imageDialog" alt="picture" style="display: none;"/>
+        </canvas>
+        <div class="modal-footer">
+          <button type="button" class=" btn btn-primary ml-45" id="btn-save" >Save</button>
+        </div>
+      </dialog>
         <div class="w-full text-sm pr-4">
           <%= f.input :name, input_html:{class: "edit-form" }, label: "Podcast 節目名稱"%>
           <%= f.input :artist, input_html:{class: "edit-form" }, label: "創作者名稱" %>
