--- a/app/views/podcasts/info.html.erb
+++ b/app/views/podcasts/info.html.erb
@@ -75,15 +75,15 @@
           <div class="w-56 h-64 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
           <div class="preview" style='overflow:hidden'>
               <img src="" id="croppedImage" style="display: none;"/>
-              <div class="w-48 h-48 rounded-lg bg-gray-300" id="beforeUpload"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
+             <div class="w-48 h-48 rounded-lg bg-gray-300"  id="beforeUpload"> <%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
           </div>
             <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
               上傳封面圖片
               <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
-              <%= f.hidden_field :x %>
-              <%= f.hidden_field :y %>
-              <%= f.hidden_field :width %>
-              <%= f.hidden_field :height %>
+              <%= f.input :x, as: :hidden %>
+              <%= f.input :y, as: :hidden %>
+              <%= f.input :width, as: :hidden %>
+              <%= f.input :height, as: :hidden %>
               <%= f.submit "button", id:"btnUpload", class: 'hidden'%>
             </label>
           </div>
