RWD與外觀調整成主色系(blue)

--- a/app/views/player/episodes/show.html.erb
+++ b/app/views/player/episodes/show.html.erb
@@ -24,7 +24,7 @@
       </li>
     </div>
     <div class="grid grid-cols-3 gap-3 rounded-lg bg-genresbg m-10">
-      <div class="my-auto pl-5 md:m-10">
+      <div class="my-auto pl-5 m-5 sm:m-5 md:m-10">
         <%= image_tag(@podcast.cover.url, size: "230x230") if @podcast.cover? %>
       </div>
       <div class="m-5 md:mt-10">
@@ -35,7 +35,7 @@
           <span class="pr-2"><i class="far fa-calendar-alt"></i></span>
           <span class=""><%= @episode.created_at.strftime('%Y-%m-%d') %></div></span>
         </div>
-        <div class="flex justify-end pr-5">
+        <div class="flex justify-end pr-5 m-5">
           <button id="playerBtn" class="justify-center"><%= image_tag("play", size: "120x120")%></button>
         </div>
       </div>
